# csv_reader

./: .flake8  README.md  config.py  main.py  products.db  pyproject.toml  sql_app.db
app/: api.py  csv_processor.py  database.py  models.py  scheduler.py
csv_reader/: api.py  csv_processor.py  main.py  models.py  scheduler.py
scripts/: black_format.py  lint.py  run_tests.py
tests/: test_csv_processor.py  test_integration.py  test_models.py
utils/: logger.py
